# litePlayer

./: .clang-format  .gitignore  CMakeLists.txt  EXCEPT.h  LICENSE  README.md  README_en.md  conanfile.py  conanfile.txt  liteP.h  main.cpp  vcpkg.json  xmake.lua
shader/: fragment.shader  vertex.shader
src/engine/: decoder.h  demuxer.h  queue.h
src/logic/: executor.h
src/renderer/: video.h
src/utils/: alias.h  ffmpeg_deleter.h
